--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -3,15 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="edu.rosehulman.kerrickmandpieragab.wheeloftime.HomeActivity">
     <item
+        android:id="@+id/search"
+        android:actionViewClass="android.widget.SearchView"
+        android:icon="@android:drawable/ic_menu_search"
+        app:showAsAction="ifRoom|collapseActionView"
+        android:title="@string/action_search"
+        />
+
+    <item
         android:id="@+id/action_home"
         android:orderInCategory="100"
         android:title="@string/action_home"
         app:showAsAction="always" />
-    <item
-        android:id="@+id/action_search"
-        android:orderInCategory="100"
-        android:title="@string/action_search"
-        app:showAsAction="always" />
+    <!--<item-->
+        <!--android:id="@+id/action_search"-->
+        <!--android:orderInCategory="100"-->
+        <!---->
+        <!--app:showAsAction="always" />-->
     <item
         android:id="@+id/action_favorites"
         android:orderInCategory="100"
