--- a/app/src/main/res/layout/character_cards.xml
+++ b/app/src/main/res/layout/character_cards.xml
@@ -6,12 +6,14 @@
     <android.support.v7.widget.CardView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:id="@+id/character_view"
+        android:id="@+id/character_view">
 
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:id="@+id/character_name"
             android:text="@string/character_name_text"/>
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
