--- a/app/src/main/res/layout/character_cards.xml
+++ b/app/src/main/res/layout/character_cards.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
@@ -15,6 +17,13 @@
             android:id="@+id/character_name"
             android:textSize="22sp"
             android:text="@string/character_name_text"/>
+
+        <ImageView
+            android:id="@+id/favorite_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            app:srcCompat="@android:drawable/star_off" />
 
     </android.support.v7.widget.CardView>
 
