--- a/app/src/main/res/layout/news_detail.xml
+++ b/app/src/main/res/layout/news_detail.xml
@@ -1,28 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_character_detail"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="wrap_content"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.rosehulman.kerrickmandpieragab.wheeloftime.CharacterDetailActivity">
 
     <android.support.v7.widget.CardView
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:layout_width="match_parent"
-        android:layout_marginBottom="10sp"
         android:id="@+id/news_view">
+
+        <FrameLayout
+            android:background="#CCCCCC"
+            android:layout_width="4dp"
+            android:layout_height="match_parent"/>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/news_title"
-            android:textSize="20sp"/>
+            android:paddingLeft="10dp"
+            android:textSize="30sp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_marginTop="30dp"
+            android:paddingTop="5dp"
+            android:paddingLeft="10dp"
             android:id="@+id/news_description" />
     </android.support.v7.widget.CardView>
 </LinearLayout>
