--- a/app/src/main/res/layout/character_cards.xml
+++ b/app/src/main/res/layout/character_cards.xml
@@ -16,6 +16,9 @@
             android:layout_width="match_parent"
             android:id="@+id/character_name"
             android:textSize="22sp"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:text="@string/character_name_text"/>
 
         <ImageView
