--- a/app/src/main/res/layout/activity_character_detail.xml
+++ b/app/src/main/res/layout/activity_character_detail.xml
@@ -10,24 +10,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.rosehulman.kerrickmandpieragab.wheeloftime.CharacterDetailActivity">
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="265dp"
         android:layout_height="wrap_content"
         android:id="@+id/character_name"
         android:textSize="30sp"
-        android:layout_centerHorizontal="true"
         android:text="@string/character_name_text"/>
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="265dp"
         android:layout_height="wrap_content"
         android:id="@+id/character_pronunciation"
         android:text="@string/character_pronunciation_text"
         android:textSize="20sp"
         android:layout_below="@id/character_name"/>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/audio_icon"
-        android:layout_toRightOf="@id/character_pronunciation"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,4 +29,10 @@
         android:layout_below="@id/character_pronunciation"
         android:textSize="15sp"
         android:text="@string/character_description_text"/>
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_record_voice_over_black_24dp"
+        android:layout_toRightOf="@id/character_name"
+        android:id="@+id/audio_button"/>
 </RelativeLayout>
